--- a/DereGuide/Base.lproj/Main.storyboard
+++ b/DereGuide/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -445,7 +445,7 @@ If you have any questions or suggestions about our Privacy Policy</string>
         <scene sceneID="3UH-G6-k3Y">
             <objects>
                 <navigationController title="设置导航" id="Lc3-lA-ZOL" customClass="BaseNavigationController" customModule="DereGuide" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="设置" image="740-gear.png" selectedImage="740-gear-selected.png" id="gI8-ss-NS6"/>
+                    <tabBarItem key="tabBarItem" title="设置" image="settings" id="gI8-ss-NS6"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="PYk-Gh-Jnc">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -503,7 +503,7 @@ If you have any questions or suggestions about our Privacy Policy</string>
         <scene sceneID="3Ro-R5-hIA">
             <objects>
                 <navigationController title="组队导航" id="IyO-O4-iMn" customClass="BaseNavigationController" customModule="DereGuide" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="组队" image="779-users.png" selectedImage="779-users-selected.png" id="Ji2-5n-2Mz"/>
+                    <tabBarItem key="tabBarItem" title="组队" image="people" id="Ji2-5n-2Mz"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="agS-1H-YQh">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -556,9 +556,7 @@ If you have any questions or suggestions about our Privacy Policy</string>
         <scene sceneID="kBj-5g-TfY">
             <objects>
                 <navigationController title="谱面导航" id="KxG-H5-NIc" customClass="BaseNavigationController" customModule="DereGuide" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="谱面" image="898-music-note.png" selectedImage="898-music-note-selected.png" id="gE2-j0-zef">
-                        <inset key="imageInsets" minX="0.0" minY="2" maxX="0.0" maxY="-2"/>
-                    </tabBarItem>
+                    <tabBarItem key="tabBarItem" title="谱面" image="musical_notes" id="gE2-j0-zef"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="unN-TZ-n18">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -575,7 +573,7 @@ If you have any questions or suggestions about our Privacy Policy</string>
         <scene sceneID="73S-hd-Baf">
             <objects>
                 <navigationController title="卡片导航" automaticallyAdjustsScrollViewInsets="NO" id="5Hs-jz-swe" customClass="BaseNavigationController" customModule="DereGuide" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="卡片" image="726-star.png" selectedImage="726-star-selected.png" id="8Lu-2l-B9T"/>
+                    <tabBarItem key="tabBarItem" title="卡片" image="stack_of_photos" id="8Lu-2l-B9T"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="TKb-dn-xix">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -613,7 +611,7 @@ If you have any questions or suggestions about our Privacy Policy</string>
         <scene sceneID="x9V-Lw-SAR">
             <objects>
                 <navigationController title="工具导航" automaticallyAdjustsScrollViewInsets="NO" id="sAv-Q2-aG8" customClass="BaseNavigationController" customModule="DereGuide" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="工具" image="921-toolbox.png" selectedImage="921-toolbox-selected.png" id="wJt-PI-tVQ"/>
+                    <tabBarItem key="tabBarItem" title="工具" image="product" id="wJt-PI-tVQ"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="B0B-4S-3iD">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -630,15 +628,10 @@ If you have any questions or suggestions about our Privacy Policy</string>
         </scene>
     </scenes>
     <resources>
-        <image name="726-star-selected.png" width="28" height="26"/>
-        <image name="726-star.png" width="28" height="26"/>
-        <image name="740-gear-selected.png" width="28" height="28"/>
-        <image name="740-gear.png" width="28" height="28"/>
-        <image name="779-users-selected.png" width="28" height="25"/>
-        <image name="779-users.png" width="28" height="25"/>
-        <image name="898-music-note-selected.png" width="28" height="28"/>
-        <image name="898-music-note.png" width="28" height="28"/>
-        <image name="921-toolbox-selected.png" width="28" height="22"/>
-        <image name="921-toolbox.png" width="28" height="22"/>
+        <image name="musical_notes" width="30" height="30"/>
+        <image name="people" width="30" height="30"/>
+        <image name="product" width="30" height="30"/>
+        <image name="settings" width="30" height="30"/>
+        <image name="stack_of_photos" width="30" height="30"/>
     </resources>
 </document>
